# PyStarTrails

./: .gitignore  .pre-commit-config.yaml  README.md  create_timelapse_video.py  generate_timelapse_frames.py  pyproject.toml  stack_all_images.py  stack_all_images_comet_style.py  stack_all_images_fade_in_fade_out.py  utils.py
images/stacking_input/: README.md
