[project]
name = "StarTrailsInPython"
version = "1.0.0"
description = "Create star trail images and timelapse videos from a series of photos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av==14.4",
    "imageio==2.37.0",
    "numpy==2.3.4",
    "pillow==12.0.0",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "ruff==0.14.1",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"